--- a/web/package.json
+++ b/web/package.json
@@ -13,6 +13,7 @@
     "core-js": "^3.29.0",
     "crypto-js": "^4.1.1",
     "js-cookie": "^3.0.5",
+    "marked": "^5.1.1",
     "pinia": "^2.0.0",
     "roboto-fontface": "*",
     "vue": "^3.2.25",
