--- a/web/package.json
+++ b/web/package.json
@@ -17,6 +17,7 @@
     "pinia": "^2.0.0",
     "roboto-fontface": "*",
     "vue": "^3.2.25",
+    "vue-native-websocket-vue3": "^3.1.7",
     "vue-router": "^4.2.4",
     "vuetify": "^3.0.0",
     "webfontloader": "^1.6.28"
