💫 [refactor] 使用 Starlette 中的 WebSocketEndpoint 类重写

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ fastapi
 uvicorn
 uvloop
 websockets
+starlette
 
 # Telegram userbot
 pyrogram
@@ -26,3 +27,6 @@ richuru
 
 # JSON
 python-rapidjson
+
+# 频道
+broadcaster
