--- a/web/package.json
+++ b/web/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint . --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "@vueuse/core": "^10.3.0",
     "axios": "^1.4.0",
     "core-js": "^3.29.0",
     "crypto-js": "^4.1.1",
